--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
     "bootstrap": "^3.3.6",
     "bootstrap-loader": "^1.0.8",
     "bootstrap-sass": "^3.3.6",
+    "bootstrap-webpack": "0.0.5",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "imports-loader": "^0.6.5",
     "jquery": "^2.2.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
